<resources>
    <string name="app_name">MartketPlace</string>
    <string name="fashion">Fashion</string>
    <string name="restaurants">Foods</string>
    <string name="electronics">Electronics</string>
    <string name="suits">Ksh 6000</string>
    <string name="Buy">buy</string>
    <string name="location">Search for your location above</string>
    <string name="loc">Location</string>
    <string name="Submit">Submit</string>
</resources>