<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FashionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:padding="20dp"
            android:src="@drawable/fashion" />



        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-120dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:padding="20dp"
            android:src="@drawable/shoes" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:text="@string/suits"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:text="Ksh 5500"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:id="@+id/SuitsButton"
            android:layout_weight="1"
            android:text="@string/Buy"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="20dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:id="@+id/ShoesButton"
            android:layout_weight="1"
            android:text="@string/Buy"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="50dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:layout_weight="1"
            android:text="tweet"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="20dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:layout_weight="1"
            android:text="tweet"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="50dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/nikes1"
            android:layout_weight="1"
            android:padding="20dp"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/app_name"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="50dp"
            android:src="@drawable/shorts"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="365dp"
            android:layout_weight="1"
            android:text="Ksh 1700"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="365dp"
            android:layout_weight="1"
            android:text="Ksh 1300"
            android:padding="20dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="410dp"
            android:id="@+id/nikeButton"
            android:layout_weight="1"
            android:text="@string/Buy"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="20dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="410dp"
            android:id="@+id/shortsButton"
            android:layout_weight="1"
            android:text="@string/Buy"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="50dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/tshirt"
            android:layout_weight="1"
            android:padding="20dp"
            android:layout_marginTop="360dp"
            android:contentDescription="@string/app_name"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:src="@drawable/jeans1"
            android:layout_marginTop="360dp"
            android:contentDescription="@string/app_name"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="575dp"
            android:layout_weight="1"
            android:text="Ksh 500"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="575dp"
            android:fontFamily="sans-serif-black"
            android:layout_weight="1"
            android:text="Ksh 700"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="620dp"
            android:id="@+id/tshirtButton"
            android:layout_weight="1"
            android:text="@string/Buy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="20dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="620dp"
            android:id="@+id/jeansButton"
            android:layout_weight="1"
            android:text="@string/Buy"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="50dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>